@startuml
class "Node`1"<T> {
    + data : T <<get>> <<set>>
    + Node(t:T)
}
class "MyCustomCollection`1"<T> {
    - first : Node<T>? = null
    - last : Node<T>? = null
    - cursor : Node<T>? = null
    + Count : int <<get>> = 0
    - getNodeWithIndex(index:int) : Node<T>
    - UpdateLast() : void
    + Reset() : void
    + Next() : void
    + Current() : T
    + Remove(item:T) : void
    + RemoveCurrent() : T
    + Add(item:T) : void
}
class "ICustomCollection`1"<T> {
}
class "IEquatable`1"<T> {
}
"Node`1" --> "next<T>" "Node`1"
"ICustomCollection`1" "<T>" <|-- "MyCustomCollection`1"
@enduml
